--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -84,9 +84,28 @@ org.hibernate.validator.constraints.time.DurationMax.message       = must be sho
 org.hibernate.validator.constraints.time.DurationMin.message       = must be longer than${inclusive == true ? ' or equal to' : ''}${days == 0 ? '' : days == 1 ? ' 1 day' : ' ' += days += ' days'}${hours == 0 ? '' : hours == 1 ? ' 1 hour' : ' ' += hours += ' hours'}${minutes == 0 ? '' : minutes == 1 ? ' 1 minute' : ' ' += minutes += ' minutes'}${seconds == 0 ? '' : seconds == 1 ? ' 1 second' : ' ' += seconds += ' seconds'}${millis == 0 ? '' : millis == 1 ? ' 1 milli' : ' ' += millis += ' millis'}${nanos == 0 ? '' : nanos == 1 ? ' 1 nano' : ' ' += nanos += ' nanos'}
 
 placeholder.atsGroup = 000
+placeholder.fax      = 000-00-00
+placeholder.phone    = 000-00-00
 
-titleform.deleteCompany = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E 
-titleform.department    = \u0412\u0442\u0434\u0456\u043B
-titleform.departments   = \u0412\u0456\u0434\u0434\u0456\u043B\u0438
+titleform.admin            = \u0410\u0434\u043C\u0456\u043D\u0447\u0430\u0441\u0442\u0438\u043D\u0430
+titleform.company          = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
+titleform.deleteCompany    = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E 
+titleform.deleteEmployee   = \u0412\u0438 \u0434\u0456\u0439\u0441\u043D\u043E \u0431\u0430\u0436\u0430\u0454\u0442\u0435 \u0432\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+titleform.department       = \u0412\u0442\u0434\u0456\u043B
+titleform.departments      = \u0412\u0456\u0434\u0434\u0456\u043B\u0438
+titleform.edit             = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0437\u0430\u043F\u0438\u0441
+titleform.editPosition     = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043F\u043E\u0441\u0430\u0434\u0443
+titleform.emploee          = \u0421\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0438
+titleform.home             = \u0414\u043E\u043C\u0456\u0432\u043A\u0430
+titleform.home.directories = \u0414\u043E\u0432\u0456\u0434\u043D\u0438\u043A\u0438
+titleform.login            = \u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u0439\u043D\u0430 \u0441\u0438\u0441\u0442\u0435\u043C\u0430 \u043F\u0456\u0434\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430.
+titleform.new              = \u041D\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441
+titleform.newEmployee      = \u041D\u043E\u0432\u0438\u0439 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A
+titleform.newPosition      = \u041D\u043E\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0430
+titleform.position         = \u041F\u043E\u0441\u0430\u0434\u0430
+titleform.room             = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
+titleform.updateEmployee   = \u0420\u0435\u0434\u0432\u0433\u0443\u0432\u0430\u0442\u0438 \u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430
+
+titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442\u0435\u043C\u0438
 
 unique.value.violation = \u00D0\u00A2\u00D0\u00B0\u00D0\u00BA\u00D0\u00B8\u00D0\u00B9 \u00D0\u00B7\u00D0\u00B0\u00D0\u00BF\u00D0\u00B8\u00D1\u0081 \u00D0\u00B2\u00D0\u00B6\u00D0\u00B5 \u00D1\u0096\u00D1\u0081\u00D0\u00BD\u00D1\u0083\u00D1\u0094!
