--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -45,6 +45,7 @@ placeholder.phone    = 000-00-00
 
 titleform.admin            = \u0410\u0434\u043C\u0456\u043D\u0447\u0430\u0441\u0442\u0438\u043D\u0430
 titleform.company          = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
+titleform.deleteCompany    = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E 
 titleform.deleteEmployee   = \u0412\u0438 \u0434\u0456\u0439\u0441\u043D\u043E \u0431\u0430\u0436\u0430\u0454\u0442\u0435 \u0432\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 titleform.department       = \u0412\u0456\u0442\u0434\u0456\u043B
 titleform.departments      = \u0412\u0456\u0434\u0434\u0456\u043B\u0438
@@ -56,7 +57,7 @@ titleform.home.directories = \u0414\u043E\u0432\u0456\u0434\u043D\u0438\u043A\u0
 titleform.login            = \u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u0439\u043D\u0430 \u0441\u0438\u0441\u0442\u0435\u043C\u0430 \u043F\u0456\u0434\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430.
 titleform.new              = \u041D\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441
 titleform.newEmployee      = \u041D\u043E\u0432\u0438\u0439 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A
-titleform.newPosition      = Yjdbq pfgbc
+titleform.newPosition      = \u041D\u043E\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0430
 titleform.position         = \u041F\u043E\u0441\u0430\u0434\u0430
 titleform.room             = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
 titleform.updateEmployee   = \u0420\u0435\u0434\u0432\u0433\u0443\u0432\u0430\u0442\u0438 \u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430
