--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -1,11 +1,12 @@
 
-buttonname.add    = \u0414\u043E\u0434\u0430\u0442\u0438
-buttonname.cancel = \u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
-buttonname.delete = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
-buttonname.edit   = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
-buttonname.login  = \u0423\u0432\u0456\u0439\u0442\u0438
-buttonname.logoff = \u0412\u0438\u0439\u0442\u0438
-buttonname.submit = \u0412\u0438\u043A\u043E\u043D\u0430\u0442\u0438
+buttonname.add        = \u0414\u043E\u0434\u0430\u0442\u0438
+buttonname.cancel     = \u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
+buttonname.changePass = \u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+buttonname.delete     = \u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
+buttonname.edit       = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+buttonname.login      = \u0423\u0432\u0456\u0439\u0442\u0438
+buttonname.logoff     = \u0412\u0438\u0439\u0442\u0438
+buttonname.submit     = \u0412\u0438\u043A\u043E\u043D\u0430\u0442\u0438
 
 error.fieldMatch     = \u043F\u043E\u043B\u044F \u043F\u0430\u0440\u043E\u043B\u044F \u043F\u043E\u0432\u0438\u043D\u043D\u0456 \u0441\u043F\u0456\u0432\u043F\u0430\u0434\u0430\u0442\u0438
 error.uniqueUsername = \u0442\u0430\u043A\u0435 \u0456\u043C'\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 \u0432\u0436\u0435 \u0456\u0441\u043D\u0443\u0454
@@ -112,6 +113,7 @@ titleform.positions        = \u041F\u043E\u0441\u0430\u043B\u0438
 titleform.roles            = \u0420\u043E\u043B\u0456
 titleform.room             = \u041A\u0456\u043C\u043D\u0430\u0442\u0438
 titleform.updateEmployee   = \u0420\u0435\u0434\u0432\u0433\u0443\u0432\u0430\u0442\u0438 \u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0430
+titleform.userChangePass   = \u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u043F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 {0}.
 titleform.users            = \u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 
 titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442\u0435\u043C\u0438
