--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -60,6 +60,7 @@ titleform.editPosition     = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0
 titleform.emploee          = \u0421\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0438
 titleform.home             = \u0414\u043E\u043C\u0456\u0432\u043A\u0430
 titleform.home.directories = \u0414\u043E\u0432\u0456\u0434\u043D\u0438\u043A\u0438
+titleform.hrOrder          = \u041D\u0430\u043A\u0430\u0437\u0438
 titleform.login            = \u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u0439\u043D\u0430 \u0441\u0438\u0441\u0442\u0435\u043C\u0430 \u043F\u0456\u0434\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430.
 titleform.new              = \u041D\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441
 titleform.newEmployee      = \u041D\u043E\u0432\u0438\u0439 \u0441\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A
