--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -11,28 +11,35 @@ buttonname.submit     = \u0412\u0438\u043A\u043E\u043D\u0430\u0442\u0438
 error.fieldMatch     = \u043F\u043E\u043B\u044F \u043F\u0430\u0440\u043E\u043B\u044F \u043F\u043E\u0432\u0438\u043D\u043D\u0456 \u0441\u043F\u0456\u0432\u043F\u0430\u0434\u0430\u0442\u0438
 error.uniqueUsername = \u0442\u0430\u043A\u0435 \u0456\u043C'\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 \u0432\u0436\u0435 \u0456\u0441\u043D\u0443\u0454
 
-inputlabel.atsGroup       = \u0413\u0440\u0443\u043F\u0430 \u0410\u0422\u0421
-inputlabel.company        = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
-inputlabel.department     = \u0412\u0456\u0434\u0434\u0456\u043B
-inputlabel.email          = \u0415\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u0430 \u043F\u043E\u0448\u0442\u0430
-inputlabel.fullname       = \u041F. \u0406. \u0411 \u043F\u0440\u0430\u0446\u0456\u0432\u043D\u0438\u043A\u0430
-inputlabel.heftPost       = \u0421\u043E\u0440\u0442\u0443\u0432\u0430\u043D\u043D\u044F \u043F\u043E\u0430\u0434\u0438
-inputlabel.isdisable      = \u0412\u0456\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u043E
-inputlabel.login          = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
-inputlabel.nameCompany    = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
-inputlabel.nameDepartment = \u041D\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043B\u0443
-inputlabel.nameEmployee   = \u0406\u043C'\u044F
-inputlabel.nameEnterprise = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
-inputlabel.namePost       = \u041D\u0430\u0437\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0438
-inputlabel.numberFax      = \u041D\u043E\u043C\u0435\u0440 \u0444\u0430\u043A\u0441\u0430
-inputlabel.numberPhone    = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
-inputlabel.numberRoom     = \u041D\u043E\u043C\u0435\u0440 \u043A\u0456\u043C\u043D\u0430\u0442\u0438
-inputlabel.password       = \u041F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
-inputlabel.patronymic     = \u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
-inputlabel.repeatPassword = \u041F\u043E\u0432\u0442\u043E\u0440\u0456\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
-inputlabel.roles          = \u0420\u043E\u043B\u0456
-inputlabel.surname        = \u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-inputlabel.username       = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.atsGroup            = \u0413\u0440\u0443\u043F\u0430 \u0410\u0422\u0421
+inputlabel.company             = \u041F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u043E
+inputlabel.department          = \u0412\u0456\u0434\u0434\u0456\u043B
+inputlabel.email               = \u0415\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u0430 \u043F\u043E\u0448\u0442\u0430
+inputlabel.fullNameEmployee    = \u041F. \u0406. \u0411.
+inputlabel.fullname            = \u041F. \u0406. \u0411 \u043F\u0440\u0430\u0446\u0456\u0432\u043D\u0438\u043A\u0430
+inputlabel.heftPost            = \u0421\u043E\u0440\u0442\u0443\u0432\u0430\u043D\u043D\u044F \u043F\u043E\u0430\u0434\u0438
+inputlabel.hrOrderDate         = \u0414\u0430\u0442\u0430 \u043D\u0430\u043A\u0430\u0437\u0443
+inputlabel.hrOrderJobBuh       = \u041E\u043F\u0440\u0430\u0446\u044C\u043E\u0432\u0430\u043D\u043E \u0431\u0443\u0445\u0433\u0430\u043B\u0442\u0435\u0440\u0456\u044F
+inputlabel.hrOrderName         = \u041D\u0430\u0437\u0432\u0430 \u043D\u0430\u043A\u0430\u0437\u0443
+inputlabel.hrOrderNumber       = \u041D\u043E\u043C\u0435\u0440 \u043D\u0430\u043A\u0430\u0437\u0443
+inputlabel.hrOrderNumberJurnal = \u2116 \u0440\u0435\u0435\u0441\u0442\u0440\u0430\u0446\u0456\u0457  \u0437\u0430\u044F\u0432\u0438 \u0432 \u0436\u0443\u0440\u043D\u0430\u043B\u0456
+inputlabel.hrOrderUploadFile   = \u0417\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0438\u0442\u0438 \u0444\u0430\u0439\u043B
+inputlabel.isdisable           = \u0412\u0456\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u043E
+inputlabel.login               = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.nameCompany         = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
+inputlabel.nameDepartment      = \u041D\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043B\u0443
+inputlabel.nameEmployee        = \u0406\u043C'\u044F
+inputlabel.nameEnterprise      = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
+inputlabel.namePost            = \u041D\u0430\u0437\u0432\u0430 \u043F\u043E\u0441\u0430\u0434\u0438
+inputlabel.numberFax           = \u041D\u043E\u043C\u0435\u0440 \u0444\u0430\u043A\u0441\u0430
+inputlabel.numberPhone         = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+inputlabel.numberRoom          = \u041D\u043E\u043C\u0435\u0440 \u043A\u0456\u043C\u043D\u0430\u0442\u0438
+inputlabel.password            = \u041F\u0430\u0440\u043E\u043B\u044C \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+inputlabel.patronymic          = \u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
+inputlabel.repeatPassword      = \u041F\u043E\u0432\u0442\u043E\u0440\u0456\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
+inputlabel.roles               = \u0420\u043E\u043B\u0456
+inputlabel.surname             = \u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+inputlabel.username            = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 
 javax.validation.constraints.AssertFalse.message     = must be false
 javax.validation.constraints.AssertTrue.message      = must be true
