--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -25,6 +25,7 @@ inputlabel.hrOrderNumber       = \u041D\u043E\u043C\u0435\u0440 \u043D\u0430\u04
 inputlabel.hrOrderNumberJurnal = \u2116 \u0440\u0435\u0435\u0441\u0442\u0440\u0430\u0446\u0456\u0457  \u0437\u0430\u044F\u0432\u0438 \u0432 \u0436\u0443\u0440\u043D\u0430\u043B\u0456
 inputlabel.hrOrderUploadFile   = \u0417\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0438\u0442\u0438 \u0444\u0430\u0439\u043B
 inputlabel.isdisable           = \u0412\u0456\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u043E
+inputlabel.isActtive=Користувач активний
 inputlabel.login               = \u041B\u043E\u0433\u0456\u043D \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 inputlabel.nameCompany         = \u041D\u0430\u0437\u0432\u0430 \u043F\u0456\u0434\u043F\u0440\u0438\u0454\u043C\u0441\u0442\u0432\u0430
 inputlabel.nameDepartment      = \u041D\u0430\u0437\u0432\u0430 \u0432\u0456\u0434\u0434\u0456\u043B\u0443
@@ -85,3 +86,4 @@ titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442
 
 unique.password        = \u041F\u0430\u0440\u043E\u043B\u0456 \u043D\u0435 \u0441\u043F\u0456\u0432\u043F\u0430\u0434\u0430\u044E\u0442\u044C.
 unique.value.violation = \u0422\u0430\u043A\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0432\u0436\u0435 \u0454!
+label.newuser=Новий корстувч
