--- a/task/src/main/resources/messages.properties
+++ b/task/src/main/resources/messages.properties
@@ -131,3 +131,4 @@ titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442
 unique.password        = \u041F\u0430\u0440\u043E\u043B\u0456 \u043D\u0435 \u0441\u043F\u0456\u0432\u043F\u0430\u0434\u0430\u044E\u0442\u044C.
 unique.value.violation = \u00D0\u00A2\u00D0\u00B0\u00D0\u00BA\u00D0\u00B8\u00D0\u00B9 \u00D0\u00B7\u00D0\u00B0\u00D0\u00BF\u00D0\u00B8\u00D1\u0081 \u00D0\u00B2\u00D0\u00B6\u00D0\u00B5 \u00D1\u0096\u00D1\u0081\u00D0\u00BD\u00D1\u0083\u00D1\u0094!
 label.newuser=Новий корстувч
+error.login=Логін чи пароль користувача введено не вірно.
