--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -87,3 +87,4 @@ titlepage.login = \u0412\u0445\u0456\u0434 \u0434\u043E \u0441\u0438\u0441\u0442
 unique.password        = \u041F\u0430\u0440\u043E\u043B\u0456 \u043D\u0435 \u0441\u043F\u0456\u0432\u043F\u0430\u0434\u0430\u044E\u0442\u044C.
 unique.value.violation = \u0422\u0430\u043A\u0438\u0439 \u0437\u0430\u043F\u0438\u0441 \u0432\u0436\u0435 \u0454!
 label.newuser=Новий корстувч
+error.login=Логін чи пароль користувача введено не вірно.
