--- a/task/src/main/resources/messages_uk.properties
+++ b/task/src/main/resources/messages_uk.properties
@@ -66,7 +66,7 @@ titleform.department=Відділ
 titleform.departments      = \u0412\u0456\u0434\u0434\u0456\u043B\u0438
 titleform.edit             = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u0437\u0430\u043F\u0438\u0441
 titleform.editPosition     = \u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043F\u043E\u0441\u0430\u0434\u0443
-titleform.emploee          = \u0421\u043F\u0456\u0432\u0440\u043E\u0431\u0456\u0442\u043D\u0438\u043A\u0438
+titleform.employee=Срівробітники
 titleform.home             = \u0414\u043E\u043C\u0456\u0432\u043A\u0430
 titleform.home.directories = \u0414\u043E\u0432\u0456\u0434\u043D\u0438\u043A\u0438
 titleform.hrOrder          = \u041D\u0430\u043A\u0430\u0437\u0438
